[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/pause_menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://menu/config_controls_menu/ControlConfigMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Tilemaps/DialogBoxTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Fonts/codeman38_press-start-2p/PressStart2P.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://common/LabelBaseModel.gd" type="Script" id=5]
[ext_resource path="res://menu/ButtonModel.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
control_menu = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -384.0
margin_right = 512.0
margin_bottom = 384.0

[node name="TileMap" parent="CenterContainer" instance=ExtResource( 3 )]
format = 1
tile_data = PoolIntArray( 589837, 0, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 2, 0, 655373, 6, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 655377, 8, 0, 655378, 7, 0, 720909, 6, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 8, 0, 720914, 7, 0, 786445, 6, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786450, 7, 0, 851981, 6, 0, 851982, 8, 0, 851983, 8, 0, 851984, 8, 0, 851985, 8, 0, 851986, 7, 0, 917517, 5, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 3, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 432.0
margin_top = 320.0
margin_right = 592.0
margin_bottom = 448.0
custom_constants/separation = 38
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Pause Menu"
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 160.0
margin_bottom = 128.0
alignment = 1

[node name="Resume" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 160.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Quit")
text = "Resume"

[node name="Controls" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 26.0
margin_right = 160.0
margin_bottom = 48.0
text = "Controls"

[node name="Quit" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 74.0
focus_neighbour_bottom = NodePath("../Resume")
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
